Revision history for Const::Exporer

v0.1.2

         - Added descriptions of similar modules, and fixed typo in
           module name.  Removed list of non-exporting modules.

         - Fixed typo in Changes.

         - Added more examples to POD, along with tests.

         - Changed module short description.

v0.1.1   2014-02-23

         - Added missing Changes and MANIFEST.SKIP files.

         - Added additional modules to SEE ALSO section.

         - Updated README.

v0.1.0   2014-02-23

         - First public release of Const::Exporter.